--- a/configuration.yaml
+++ b/configuration.yaml
@@ -9,36 +9,22 @@ default_config:
 tts:
   - platform: google_translate
 
-switch:
-  - platform: command_line
-    switches:
-      layla_tv_power:
-        command_on: 'curl -X POST http://10.0.1.54:8060/keypress/PowerOn'
-        command_off: 'curl -X POST http://10.0.1.54:8060/keypress/PowerOff'
-        command_state: 'curl -s GET http://10.0.1.54:8060/query/device-info | grep power-mode | sed -e "s:<power-mode>Headless</power-mode>:OFF:" -e "s:<power-mode>DisplayOff</power-mode>:OFF:" -e "s:<power-mode>PowerOn</power-mode>:ON:"'
-        value_template: '{{ value == "ON" }}'
+zwave:
+ usb_path: /dev/ttyUSB0
 
-homekit:
-  auto_start: false
+zha:
+ usb_path: /dev/ttyUSB1
+ database_path: /home/homeassistant/.homeassistant/zigbee.db
 
-  filter:
-    exclude_entities:
-      - climate.linear_nortek_security_control_llc_gc_tbz48_battery_powered_z_wave_thermostat_heating_1
+switch: !include switches.yaml
 
-  entity_config:
-    climate.linear_nortek_security_control_llc_gc_tbz48_battery_powered_z_wave_thermostat_cooling_1:
-      name: Office Thermostat
+homekit: !include homekit.yaml
 
-    climate.linear_nortek_security_control_llc_gc_tbz48_battery_powered_z_wave_thermostat_heating_1:
-      name: Office Thermostat
-
-media_player:
-  - platform: roku
-    host: 10.0.1.54
+discovery:
 
 homeassistant:
   customize:
-    climate.linear_nortek_security_control_llc_gc_tbz48_battery_powered_z_wave_thermostat_heating_1:
+    climate.office_thermostat_heating_1:
       hidden: true
 
 group: !include groups.yaml
